MarcoKitTests/TestData/error/json.marco
--before
{"hello": "world", "array": [1, 2, 3, true, false, "a", {}, [], [1]]}

--after
8-9: Unexpected value character ':'
